--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/felipeth04/universeUI_librery#readme",
   "dependencies": {
-    "normalize.css": "^8.0.1",
+    "normalize.css": "8.0.1",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
