--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/felipeth04/universeUI_librery#readme",
   "dependencies": {
+    "classnames": "2.3.2",
     "normalize.css": "8.0.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
